<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mobilearn</string>
	<string name="title">Jeong</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="date">2013.08.09 PM 02:44</string>
    <string name="q1">tariff</string>
    <string name="a1">1. 차량들</string>
    <string name="a2">2. 관세</string>
    <string name="a3">3. 교통</string>
    <string name="a4">4. 끔직한</string>
    <string name="a5">5. 느린</string>
    <string name="a6"></string>
    <string name="unlock">탭하여 잠금해제(5)</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="state_1">초기학습</string>
    <string name="state_2">감각기억</string>
    <string name="state_3">단기기억</string>
    <string name="state_4">장기기억</string>
    
    <string name="skip_1">0</string>
    <string name="skip_2">10</string>
    <string name="skip_3">20</string>
    <string name="skip_4">30</string>
    
    <string name="mode_question">Question</string>
    <string name="mode_view">View</string>
    
    <string name="add_playlist">Register New PlayList...</string>
    <string name="edit_playlist">Edit</string>
    <string name="del_playlist">Delete</string>
    <string name="empty_playlist">Empty</string>
    <string name="complete_playlist">Complete</string>
    
    <string name="action_home">Home</string>
    <string name="action_list">List</string>
    <string name="action_playlist">PlayList</string>
    <string name="action_ok">OK</string>
    
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>
    
    <string-array name="menu_list">
        <item>MAIN</item>
        <item>MY</item>
        <item>LIBRARY</item>
        <item>STATISTICS</item>
        <item>MARKET</item>
        <item>SETTING</item>
    </string-array>
     
</resources>