<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="#fff" >
	
	<LinearLayout
        android:id="@+id/playlist_menu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1" >
        <TextView
	        android:id="@+id/btn_mode_question"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center"
	        android:padding="3dp"
	        android:textSize="15dp"
	        android:text="@string/mode_question" />
        <TextView
	        android:id="@+id/btn_mode_view"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center"
	        android:padding="3dp"
	        android:textSize="15dp"
	        android:text="@string/mode_view" />
    </LinearLayout>
     
	<LinearLayout 
	    android:id="@+id/question_front"
	    android:layout_width="match_parent"
		android:layout_height="0dp"
        android:layout_weight="0.9"
	    android:orientation="vertical" >
	
		<TextView
	        android:id="@+id/q1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="0.5"
	        android:gravity="center"
	        android:text="@string/q1"
	        android:textSize="30sp" />
	
	    <LinearLayout
	        android:id="@+id/answer_list"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="0.5"
	        android:orientation="vertical" >
	    </LinearLayout>
	
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/question_back"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
        android:layout_weight="0.9"
	    android:orientation="vertical"
	    android:visibility="gone"  >
		
		<TextView
	        android:id="@+id/view"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="0.5"
	        android:gravity="center"
	        android:text="@string/q1"
	        android:textSize="30sp" />
	
	    <LinearLayout
	        android:id="@+id/answer_list"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="0.4"
	        android:orientation="vertical" >
	    </LinearLayout>
	
	</LinearLayout>
</LinearLayout>